--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <div class="container">
                 <div class="content-center">
                   <div class="cc-profile-image">
-                    <a href="#"><img src="images/anthony.jpg" alt="Image" /></a>
+                    <a href="#"><img src="images/afzal1.png" alt="Image" /></a>
                   </div>
                   <div class="h2 title">Mohmad Afzal Sorathiya</div>
                   <p class="category text-white">
